# llm-docqa

./: .env.example  .gitignore  README.md  main.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
src/: chat.py  chunker.py  cli.py  display.py  embedder.py  extractor.py  history.py  retriever.py
tests/: test_chat.py  test_chunker.py  test_retriever.py
